--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -42,3 +42,7 @@ hermesEnabled=true
 # This allows your app to draw behind system bars for an immersive UI.
 # Note: Only works with ReactActivity and should not be used with custom Activity.
 edgeToEdgeEnabled=false
+
+# Allow cleartext traffic for HTTP connections (set to false for production)
+# Note: Our app uses HTTPS, so this is set to false for security
+usesCleartextTraffic=false
