--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.5.1",
     "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-firebase/app": "^23.7.0",
+    "@react-native-firebase/messaging": "^23.7.0",
     "@react-native/new-app-screen": "0.82.1",
     "@react-navigation/bottom-tabs": "^7.8.5",
     "@react-navigation/native": "^7.1.20",
     "@react-navigation/stack": "^7.6.4",
+    "@shopify/flash-list": "^2.2.0",
     "axios": "^1.13.2",
     "lottie-react-native": "^7.3.4",
     "lucide-react-native": "^0.554.0",
     "react": "19.1.1",
     "react-native": "0.82.1",
     "react-native-biometrics": "^3.0.1",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.29.1",
     "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
@@ -46,7 +50,7 @@
     "@types/react": "^19.1.1",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
-    "jest": "^29.6.3",
+    "jest": "^29.6.3", 
     "prettier": "2.8.8",
     "react-test-renderer": "19.1.1",
     "typescript": "^5.8.3"
