--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,8 @@ yarn-error.log
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+
+# Firebase
+*firebase-adminsdk*.json
+google-services.json
+GoogleService-Info.plist
